@@ -428,6 +428,7 @@ const MOption MP_NEWMAIL_SOUND_FILE;
 #if defined(OS_UNIX) || defined(__CYGWIN__)
 const MOption MP_NEWMAIL_SOUND_PROGRAM;
 #endif // OS_UNIX
+const MOption MP_SHOW_NEWMAILNOTIFICATION;
 const MOption MP_SHOW_NEWMAILMSG;
 const MOption MP_SHOW_NEWMAILINFO;
 const MOption MP_NEWMAIL_UNSEEN;
@@ -850,6 +851,7 @@ static const MOptionData MOptions[] =
 #if defined(OS_UNIX) || defined(__CYGWIN__)
     DEFINE_OPTION(MP_NEWMAIL_SOUND_PROGRAM),
 #endif // OS_UNIX
+    DEFINE_OPTION(MP_SHOW_NEWMAILNOTIFICATION),
     DEFINE_OPTION(MP_SHOW_NEWMAILMSG),
     DEFINE_OPTION(MP_SHOW_NEWMAILINFO),
     DEFINE_OPTION(MP_NEWMAIL_UNSEEN),
