@@ -9,6 +9,7 @@
 Release 0.68 'Cynthia' September xx, 2010
 -----------------------------------------
 
+2012-07-28 VZ: Optionally use popup notifications for new mail reporting.
 2012-07-21 VZ: Make it possible to set base mailbox path in the GUI.
 2011-12-26 VZ: Allow to create and configure new folders in "Quick filter".
 2010-08-01 VZ: Show hidden folders if new mail arrives into them.
